--- a/src/css dosyaları/navbar.css
+++ b/src/css dosyaları/navbar.css
@@ -22,9 +22,10 @@
   }
   
   .search input[type="search"] {
-    padding: 6px 12px;
+    padding: 12px 12px;
     border: 1px solid #27ae60;
-    border-radius: 4px 0 0 4px;
+    width: 550px;
+    border-radius: 15px;
     outline: none;
     font-size: 16px;
     background: #f8fff8;
@@ -32,11 +33,12 @@
   }
   
   .search button {
+    left: 500px;
     background-color: #27ae60;
     border: none;
     color: #fff;
-    padding: 7px 12px;
-    border-radius: 0 4px 4px 0;
+    padding: 12px 15px;
+    border-radius: 15px;
     cursor: pointer;
     font-size: 18px;
     transition: background 0.2s;
@@ -46,43 +48,6 @@
     background-color: #219150;
   }
   
-  .link ul {
-    list-style: none;
-    display: flex;
-    gap: 24px;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .link li {
-    color: #27ae60;
-    font-weight: 500;
-    cursor: pointer;
-    position: relative;
-    transition: color 0.2s;
-  }
-  
-  .link li::after {
-    content: "";
-    display: block;
-    width: 0;
-    height: 3px;
-    background: #27ae60;
-    border-radius: 2px;
-    transition: width 0.3s, background 0.2s;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-  }
-  
-  .link li:hover {
-    color: #145a32;
-  }
-  
-  .link li:hover::after {
-    width: 100%;
-    background: #145a32;
-  }
   
   .profile {
     display: flex;
